--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "movie-web",
   "version": "0.1.0",
+  "homepage": "https://bangjeep-enterprise.com/hyenna",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
@@ -21,9 +22,8 @@
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false  NODE_ENV=development craco start",
-    "build": "GENERATE_SOURCEMAP=false craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "build": "GENERATE_SOURCEMAP=false  NODE_ENV=production craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
